# mfem_sandbox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  activate_mfemsb  spack.yaml
cmake/: FindMFEM.cmake  Solvers.cmake
common/: tmp.cpp  tmp.hpp
meshes/: defaults.txt
scripts/: run_solver.sh
solvers/ex0p/: README.md  ex0p.cpp
solvers/ex9p/: AIR_Prec.hpp  DG_Solver.hpp  FE_Evolution.hpp  README.md  ex9p.cpp  ex9p.hpp
spack/: repo.yaml
